--- a/index.html
+++ b/index.html
@@ -1,51 +1,50 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Next : " />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Next by gsi-cyberjapan</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Next</title>
   </head>
-
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/gsi-cyberjapan/next">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/gsi-cyberjapan/next/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/gsi-cyberjapan/next/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/gsi-cyberjapan/next">View on GitHub</a>
+    <div class="wrapper">
 
-          <h1 id="project_title">Next</h1>
-          <h2 id="project_tagline"></h2>
+      <section>
+        <div id="title">
+          <h1>Next</h1>
+          <p></p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/gsi-cyberjapan">gsi-cyberjapan</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/gsi-cyberjapan/next/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/gsi-cyberjapan/next/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
         <p>電子国土Web.NEXT 技術掲示板（以下「掲示板」という。）は、電子国土Web.NEXT（標高タイルを含む電子国土タイルデータを含む）に関連して、外部からの技術的な提案を受け取り、外部との技術的な議論を進めることを目的としたものです。</p>
 
 <p>この掲示板での回答は技術的な討論のために電子国土Webシステム担当者が行うものであり、議論を円滑に進めることを優先し、必ずしも国土地理院の最終的な判断と整合しないことになる可能性があります。国土地理院の最終的な判断は、利用規約等の公式な文書によって表現されることになります。</p>
       </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Next maintained by <a href="https://github.com/gsi-cyberjapan">gsi-cyberjapan</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
-
   </body>
 </html>
